# hackathon-lavirginia-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  railway.toml
.github/workflows/: ci.yml
capsule_qc_mvp/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
capsule_qc_mvp/artifacts/current/: .gitkeep  metadata.json  model.pth
capsule_qc_mvp/dataset/: README.md
capsule_qc_mvp/dataset/templates/: metadata_template.csv  multilabel_template.csv
capsule_qc_mvp/src/capsule_qc/: __init__.py  cli.py  settings.py
capsule_qc_mvp/src/capsule_qc/api/: app.py  schemas.py
capsule_qc_mvp/src/capsule_qc/data/: __init__.py  exporters.py  ingest.py  manifest.py
capsule_qc_mvp/src/capsule_qc/ml/: __init__.py  artifacts.py  datasets.py  metrics.py  models.py  predictor.py  preprocessing.py  training.py
capsule_qc_mvp/tests/: test_api.py  test_artifacts.py  test_ingest.py  test_manifest.py
deploy/vps/: .env.example  Caddyfile  README.md  docker-compose.yml
prisma/: schema.prisma  seed.ts
public/: camera-demo.html
src/: app.ts
src/config/: env.ts  prisma.ts
src/controllers/: admin.controller.ts  auth.controller.ts  validator.controller.ts
src/middlewares/: api-key.middleware.ts  auth.middleware.ts  upload.middleware.ts
src/models/: admin.model.ts
src/prompts/: package-validator.prompt.ts
src/routes/: admin.routes.ts  auth.routes.ts  (+1 more)
tests/: env.test.ts  python-model.mapper.test.ts
(+6 files in other folders)
