[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capsule-qc-mvp"
version = "0.1.0"
description = "MVP modular para inspeccion visual de cajas y capsulas La Virginia."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pillow>=10.0,<12.0",
  "numpy>=2.0,<3.0",
  "torch>=2.4,<3.0",
  "python-multipart>=0.0.9,<1.0",
]

[project.scripts]
capsule-qc = "capsule_qc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
